# statlingua-py

./: .gitignore  README.md  example.py  example_agent.py  example_diagnose.py  pyproject.toml
src/statlingua/: __init__.py  diagnostic.py  explain.py  model_handlers.py
src/statlingua.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/statlingua/prompts/: __init__.py
src/statlingua/prompts/audience/: domain_expert.md  manager.md  novice.md  researcher.md  student.md
src/statlingua/prompts/common/: caution.md  role_base.md
src/statlingua/prompts/style/: html.md  json.md  latex.md  markdown.md  text.md
src/statlingua/prompts/verbosity/: brief.md  detailed.md  moderate.md
tests/: test_explain.py
